# LogIQ

./: # AI-Powered Monitoring & Auto-Debugging.md  .gitignore  README.md
backend/: .env  .env.example  README.md  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260426_0001_initial_schema.py  20260426_0002_add_last_used_at_to_api_keys.py  20260426_0003_add_ingest_requests_and_work_queue.py  20260426_0004_add_cloud_integrations.py  20260426_0005_add_insight_feedback.py
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  api_key.py  cloud_integration.py  ingest_request.py  insight_feedback.py  log.py  project.py  work_queue.py
backend/app/schemas/: alert.py  insight.py  integration.py  log.py  project.py  service.py
backend/app/services/: alert_service.py  cloud_normalizer.py  cloud_parsers_extended.py  insights_service.py  queue_service.py
backend/app/workers/: queue_worker.py
backend/dashboard/: app.html
backend/monitor_sdk/: client.py  middleware.py
backend/tests/: conftest.py  test_alerts_api.py  test_insights_api.py  test_llm.py  test_logs_api.py  test_ollama.py  test_sdk.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Sidebar.jsx  Topbar.jsx
frontend/src/pages/: AIInsights.jsx  (+6 more)
sdk/: README.md  pyproject.toml
sdk/src/monitor_sdk/: __init__.py  client.py  context.py  middleware.py
sdk/src/project_monitor_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+9 files in other folders)
